tests/data/bad/bad_schema.py
from __future__ import annotations

from rizhiy_cfg import CN

from ..good.good import cfg

cfg = CN(cfg)
cfg.DICT.Y = CN()
